# realitydoor

./: .dockerignore  .gitignore  Dockerfile  PROJECT_ROADMAP.md  README.md  docker-compose.yml  render.yaml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py  router.py
backend/app/api/routes/: chat.py  documents.py  health.py  income.py  packets.py  readiness.py  rules.py  session.py
backend/app/core/: config.py  database.py  request_id.py
backend/app/repositories/: __init__.py  documents.py  packets.py  sessions.py
backend/app/schemas/: chat.py  documents.py  income.py  packets.py  readiness.py  rules.py  session.py
backend/app/services/: __init__.py  chat.py  documents.py  income.py  packets.py  readiness.py  retrieval.py  rules.py  safety.py  storage.py
backend/migrations/: 001_initial.sql  002_runtime_evidence.sql  003_profile_consent.sql  004_program_selection.sql
backend/scripts/: apply_migrations.py  build_rule_corpus.py  check_model_providers.py  cleanup_expired_data.py  generate_demo_packet.py  generate_examples.py  generate_synthetic_documents.py  import_albany_mtsp.py  seed_reference_data.py  smoke_supabase.py  verify_synthetic_documents.py
backend/tests/: conftest.py  test_api.py  test_chat.py  test_chat_gateway.py  test_documents.py  test_packets.py  test_profile_understand.py  test_readiness.py  test_retrieval.py
docs/: IMPLEMENTATION_STATUS.md  PROJECT_HANDBOOK.md  USER_GUIDE.md
examples/: README.md  manifest.json
frontend/: README.md  index.html  (+3 more)
(+58 files in other folders)
