[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "realdoor-backend"
version = "0.1.0"
description = "Evidence-first LIHTC application-readiness API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.5,<3",
  "httpx>=0.27,<1",
  "asyncpg>=0.30,<1",
  "python-multipart>=0.0.12,<1",
  "PyJWT>=2.9,<3",
  "reportlab>=4.2,<5",
  "pypdf>=5,<6",
  "pypdfium2>=4,<5",
  "Pillow>=11,<12",
]

[dependency-groups]
dev = ["pytest>=8,<9"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["migrations*", "scripts*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
